# RestaurantMenuSummarizer

./: .dockerignore  .gitignore  Dockerfile  Insomnia_2025-11-18.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  cache.py  config.py  llm_client.py  prompts.py  routes.py
app/api/: routes.py
app/db/: db.py
app/domain/: models.py
app/middleware/: auth.py
app/route/: routes.py
app/services/: cache.py  llm_client.py  menu_service.py  scraper.py  utils.py
static/: index.html
static/css/: index.css
static/js/: app.js
tests/: test_api_caching.py  test_frontend_e2e.py  test_menu_schema.py  test_normalize_prices.py
